# williambdean.github.io

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tags.json
.github/workflows/: ci.yml  deploy.yml  preview.yml
appearances/: index.html
blog/: index.html
contact/: index.html
docs/: appearances.md  contact.md  index.md  open-source.md  repos-and-contributions.md  repos.md  resources.md  tags.md
docs/blog/: index.md
docs/overrides/: main.html
docs/resources/: index.md
docs/stylesheets/: extra.css
open-source/: index.html
overrides/: main.html
pr-18/: 404.html  index.html  sitemap.xml
pr-18/appearances/: index.html
pr-18/blog/: index.html
pr-18/open-source/: index.html
pr-19/: 404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  sitemap.xml
pr-19/appearances/: index.html
pr-19/blog/: index.html
pr-19/open-source/: index.html
pr-19/search/: search_index.json
pr-20/: 404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  sitemap.xml
pr-22/: 404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  robots.txt  sitemap.xml
repos/: index.html
repos-and-contributions/: index.html
resources/: index.html
scripts/: validate-frontmatter.py
search/: search_index.json
tags/: index.html
(+104 files in other folders)
