[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["Will Dean <wd60622@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
typer = "^0.7.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.11"
mkdocs-jupyter = "^0.22.0"
blacken-docs = "^1.12.1"
mkdocs-markdownextradata-plugin = "^0.2.5"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
