[project]
name = "website"
version = "0.1.0"
description = "Personal website for Will Dean"
authors = [{ name = "Will Dean", email = "wd60622@gmail.com" }]
requires-python = "~=3.12.0"
readme = "README.md"

[dependency-groups]
dev = [
    "pytest>=7.2.0,<8",
    "pytest-cov>=4.0.0,<5",
    "typer>=0.7.0,<0.8",
]
docs = [
    "mkdocs>=1.4.2,<2",
    "mkdocs-material>=9.4,<10",
    "mkdocs-jupyter>=0.24.0,<0.25",
    "blacken-docs>=1.12.1,<2",
    "mkdocs-markdownextradata-plugin>=0.2.5,<0.3",
    "mkdocs-git-revision-date-localized-plugin>=1.1.0,<2",
    "mkdocs-video>=1.5.0",
]
misc = [
    "pandas>=2.0.3,<3",
    "matplotlib>=3.7.2,<4",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
    "misc",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
